implement randomDriver assign,userDetails set carRegisterNuber setMethords in RentCarController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
@@ -134,8 +134,105 @@
 
             </ul>
         </div>
-    </nav>
 
+        <!---------------------user acc----------------------->
+        <div class="row me-3" style="width: 300px">
+            <div class="col-8 ">
+                <label class="col-5"></label>
+                <label class="col-6 text-end" id="UserID"></label>
+                <label class="col-12 text-end" id="UserName"></label>
+            </div>
+            <button class="navbar-toggler d-inline-block align-text-top align-items-end col-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                <img src="../assests/images/profile-user.png" width="50px" height="50px">
+            </button>
+        </div>
+    </nav>
+    <!---------------------user acc offcanvas----------------------->
+    <div  class=" myf offcanvas offcanvas-end " tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" >
+        <div class="col-12 mt-2" style="height:30px;">
+            <label class="col-7 ms-2 fs-4" style="height: max-content;font-family: 'Convergence', sans-serif;text-decoration: underline;">User Profile</label>
+            <label class="col-4 ms-2 fs-4 text-end" style="height: max-content;" id="UserProfileID"></label>
+        </div>
+        <div class="row justify-content-center" style="height: 100px">
+            <div class="col-3 align-self-center">
+                <img src="../assests/images/profile-user.png " width="85px" height="85px">
+            </div>
+        </div>
+        <form class="row g-1 gx-2 ms-3 me-3 fs-6">
+            <div class="col-md-6">
+                <label class="form-label" for="inputName">Name</label>
+                <input class="form-control" id="inputName" type="text">
+            </div>
+            <div class="col-md-6">
+                <label class="form-label" for="inputAddress">Address</label>
+                <input class="form-control" id="inputAddress" type="text">
+            </div>
+            <div class="col-md-6">
+                <label class="form-label" for="inputContact">Contact No</label>
+                <input class="form-control" id="inputContact" type="tel">
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail">
+            </div>
+            <div class="col-md-6">
+                <label for="inputNIC" class="form-label">NIC</label>
+                <input type="text" class="form-control" id="inputNIC">
+            </div>
+            <div class="col-6">
+                <label for="inputDrivingLicense" class="form-label">Driving License</label>
+                <input type="text" class="form-control" id="inputDrivingLicense">
+            </div>
+            <div class="col-md-6">
+                <label for="inputUsername" class="form-label">Username</label>
+                <input type="text" class="form-control" id="inputUsername">
+            </div>
+            <div class="col-md-6">
+                <label class="form-label" for="inputPassword"> Password</label>
+                <input class="form-control" id="inputPassword" type="password" readonly>
+            </div>
+            <div class="col-md-4">
+                <label for="formFileMultipleNICFront" class="form-label">Image Of NIC Front</label>
+                <input class="form-control" type="file" id="formFileMultipleNICFront">
+            </div>
+            <div class="col-md-4">
+                <label for="formFileMultipleNICBack" class="form-label">Image Of NIC Back</label>
+                <input class="form-control" type="file" id="formFileMultipleNICBack">
+            </div>
+            <div class="col-md-4">
+                <label for="formFileMultipleDL" class="form-label">Image Of Driving License</label>
+                <input class="form-control" type="file" id="formFileMultipleDL" multiple>
+            </div>
+            <div class="row mt-2">
+                <div class="col-6">
+                    <label class="col-6 fs-5" style="height: max-content; width: max-content;">Change Password</label>
+                </div>
+                <div class="col-3">
+                    <button class="btn btn-dark ms-4" type="button" style="width: max-content;" id="btnUpdateUserImages">Update Images </button>
+                </div>
+                <div class="col-3 align-self-end">
+                    <button class="btn btn-dark ms-4" type="button" style="width: max-content;" id="btnUpdateUser">Update Info </button>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <label class="form-label" for="inputNPassword">New Password</label>
+                <input class="form-control" id="inputNPassword" type="password" aria-describedby="pwHelp">
+                <div id="pwHelp" class="form-text">Use 8 or more characters with a mix of letters, numbers & symbols</div>
+            </div>
+            <div class="col-md-4 align-self-end">
+                <button class="btn btn-dark mt-5 ms-5" type="button" id="btnResetUserPw">Reset Password</button>
+            </div>
+            <div class="row mt-2 ">
+                <div class="col-10 align-items-end">
+                    <button class="btn  btn-dark" type="button" id="btnDeleteUser">Delete Account</button>
+                </div>
+                <div class="col-2 align-self-end">
+                    <button class="btn btn-dark ms-3" type="button"><a href="../index.html" style="text-decoration: none; color: white">LogOut</a></button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <!-------------------------------------------->
 </header>
 
 <main id="main" class="container-fluid">
@@ -480,8 +577,8 @@
         <div class="row">
             <div class="col-7">
                 <div class="col-12 " style="height:70px;">
-                    <label class="col-12 fs-2 mt-2"
-                           style="height: max-content;font-family: 'Convergence', sans-serif;">Toyota Premio</label>
+                    <label class="col-12 fs-2 mt-2 "
+                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="Premio">Toyota Premio</label>
                 </div>
                 <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions1" class="carousel slide" style="height: 453px">
@@ -558,7 +655,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4 btnBookCar" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -571,8 +668,8 @@
         <div class="row">
             <div class="col-7">
                 <div class="col-12 " style="height:70px;">
-                    <label class="col-12 fs-2 mt-2"
-                           style="height: max-content;font-family: 'Convergence', sans-serif;">Mercedes-Benz</label>
+                    <label class="col-12 fs-2 mt-2 "
+                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="MBenz">Mercedes-Benz</label>
                 </div>
                 <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions2" class="carousel slide" style="height: 453px">
@@ -649,7 +746,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4 btnBookCar" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -663,7 +760,7 @@
             <div class="col-7">
                 <div class="col-12 " style="height:70px;">
                     <label class="col-12 fs-2 mt-2"
-                           style="height: max-content;font-family: 'Convergence', sans-serif;">BMW i8</label>
+                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="i8">BMW i8</label>
                 </div>
                 <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions3" class="carousel slide" style="height: 453px">
@@ -740,7 +837,7 @@
                     <div class="col-12 " style="height: 65px">
                         <div class="row justify-content-end">
                             <div class="col-4">
-                                <button type="button" class="btn btn-dark ms-3 fs-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
+                                <button type="button" class="btn btn-dark ms-3 fs-4 btnBookCar" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Car</button>
                             </div>
                         </div>
                     </div>
@@ -780,8 +877,8 @@
                             <label type="text" class="form-label fs-5" id="inputId"></label>
                         </div>
                         <div class="col-md-8">
-                            <label for="inputName" class="form-label fs-5">User Name : </label>
-                            <label class="form-label fs-5" id="inputName"></label>
+                            <label for="inputUName" class="form-label fs-5">User Name : </label>
+                            <label class="form-label fs-5" id="inputUName"></label>
                         </div>
                         <div class="col-md-4">
                             <label for="inputPickUpDate" class="form-label">PickUp Date</label>
@@ -817,14 +914,14 @@
                         </div>
                         <div class="col-md-4">
                             <div class="form-check mt-1 ms-3">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                                <label class="form-check-label" for="flexRadioDefault1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioWantDriver">
+                                <label class="form-check-label" for="radioWantDriver">
                                     I Want Driver
                                 </label>
                             </div>
                             <div class="form-check mt-2 ms-3">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                                <label class="form-check-label" for="flexRadioDefault2">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="radioDontWantDriver" checked>
+                                <label class="form-check-label" for="radioDontWantDriver">
                                     I Don't Want Driver
                                 </label>
                             </div>
@@ -846,6 +943,7 @@
             </div>
         </div>
     </div>
+
     <!---------------------- car booking model end--------------------------------->
 </main>
 
@@ -853,6 +951,7 @@
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
 <script src="../controllers/luxuryCars.js"></script>
+<script src="../controllers/UserDashboardController.js"></script>
 <script src="../controllers/RentCarController.js"></script>
 </body>
 </html>
