implement uploadBankSlipAndPath method in rentController,rentServiceImpl classes,rentService,rentRepo interfaces and addCarRent,UploadBankSlip methords in RentConteoller.js in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1318,6 +1318,7 @@
                             </label>
                         </div>
                         </div>
+                        <input type="text" id="inputDriverID" hidden name="id">
                         <div class="col-md-4">
                             <label for="inputDriverName" class="form-label">Driver Name</label>
                             <input type="text" class="form-control" id="inputDriverName"  readonly>
@@ -1330,7 +1331,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-dark">Place Booking</button>
+                    <button type="button" class="btn btn-dark" id="btnPlaceBooking">Place Booking</button>
                 </div>
             </div>
         </div>
