--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
@@ -1102,6 +1102,7 @@
                                 </label>
                             </div>
                         </div>
+                        <input type="text" id="inputDriverID" hidden name="id">
                         <div class="col-md-4">
                             <label for="inputDriverName" class="form-label">Driver Name</label>
                             <input type="text" class="form-control" id="inputDriverName"  readonly>
@@ -1114,7 +1115,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-dark">Place Booking</button>
+                    <button type="button" class="btn btn-dark" id="btnPlaceBooking">Place Booking</button>
                 </div>
             </div>
         </div>
