--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1134,7 +1134,7 @@
             <div class="col-7">
                 <div class="col-12 " style="height:70px;">
                     <label class="col-12 fs-2 mt-2 lblBrand"
-                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="Aqua">Toyota Prius C/ Aqua - Auto</label>
+                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="Aqua">Toyota Prius C - Aqua - Auto</label>
                 </div>
                 <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions4" class="carousel slide" style="height: 453px">
