--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
@@ -645,7 +645,7 @@
             <div class="col-7">
                 <div class="col-12 " style="height:70px;">
                     <label class="col-12 fs-2 mt-2 "
-                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="Corolla">Toyota Corolla Axio/ NZE141</label>
+                           style="height: max-content;font-family: 'Convergence', sans-serif;" id="Corolla">Toyota Corolla Axio - NZE141</label>
                 </div>
                 <div class="col ms-5 me-3 bg-black ">
                     <div id="carouselExampleCaptions" class="carousel slide" style="height: 453px">
