implement addMaintence method in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1123,8 +1123,8 @@
                                     <input class="form-control" id="inputMaintainID" type="text">
                                 </div>
                                 <div class="col-md-2">
-                                    <label class="form-label" for="inputMaintainCarRNo">Car Registration No</label>
-                                    <input class="form-control" id="inputMaintainCarRNo" type="text">
+                                    <label class="form-label" for="selectMaintainCarRNo">Car Registration No</label>
+                                    <select class="form-select" id="selectMaintainCarRNo" aria-label="Default select example"></select>
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label" for="inputMaintainDescription">Description</label>
@@ -1133,7 +1133,7 @@
                                 <div class="col-md-2">
                                     <label for="selectMaintainStatus" class="form-label">Status</label>
                                     <select class="form-select" id="selectMaintainStatus" aria-label="Default select example">
-                                        <option value="1">In Maintains</option>
+                                        <option value="1">Under Maintenance</option>
                                         <option value="2">Done</option>
                                     </select>
                                 </div>
