implement removeFromMaintenence method in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1134,7 +1134,7 @@
                                     <label for="selectMaintainStatus" class="form-label">Status</label>
                                     <select class="form-select" id="selectMaintainStatus" aria-label="Default select example">
                                         <option value="1">Under Maintenance</option>
-                                        <option value="2">Done</option>
+                                        <option value="2">Done Maintenance</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
