implement loadAllMaintains method in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1110,8 +1110,13 @@
             <!---------------------------maintain page start------------------------------------------------------>
             <div class="row container-fluid" id="maintains" style="height: 654px;">
                 <div class="row" style="height: 50px">
-                    <div class="col-12 ms-2">
+                    <div class="col-8 ms-2 ">
                         <label class="mt-2 fs-4" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-screwdriver-wrench"></i> Maintains</label>
+                    </div>
+                    <div class="col-3 ms-2">
+                        <div class="d-grid  gap-2 d-md-flex justify-content-md-end">
+                        <button id="btnRefresh" class="btn fs-6 me-0 mt-3 btn-dark" type="button">Add New Maintain</button>
+                        </div>
                     </div>
                 </div>
                 <div class="row ms-2" style="height: 590px">
