implement loadAllrentReq and bind click event in adminDashboardController.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -979,8 +979,8 @@
                                     <input class="form-control" id="inputReqUserID" type="text" readonly>
                                 </div>
                                 <div class="col-md-4">
-                                    <label class="form-label" for="inputReqNameOrUser">User Name</label>
-                                    <input class="form-control" id="inputReqNameOrUser" type="text" readonly>
+                                    <label class="form-label" for="inputReqNameOfUser">User Name</label>
+                                    <input class="form-control" id="inputReqNameOfUser" type="text" readonly>
                                 </div>
                                 <div class="col-md-2">
                                     <label for="inputReqPickUpDate" class="form-label">PickUp Date</label>
@@ -1079,7 +1079,7 @@
                                     <th scope="col">Status</th>
                                 </tr>
                                 </thead>
-                                <tbody></tbody>
+                                <tbody id="tblRentReqTable"></tbody>
                             </table>
                         </div>
                     </div>
