--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -1028,7 +1028,7 @@
                                         <input type="text" class="form-control" id="inputReqRentStatus" readonly>
                                     </div>
                                     <div class="d-grid mt-5 gap-2 d-md-flex justify-content-md-end">
-                                        <button class="btn fs-5 me-3 btn-dark" type="button">Accept</button>
+                                        <button class="btn fs-5 me-3 btn-dark" type="button" id="btnRentReqAccept">Accept</button>
                                     </div>
                                 </div>
                             </form>
@@ -1044,7 +1044,7 @@
                                     <input class="form-control col-9" id="inputReqReasonDeny" type="text">
                                 </div>
                                 <div class="col-2">
-                                    <button class="btn fs-5 btn-dark"  type="button">Deny</button>
+                                    <button class="btn fs-5 btn-dark" type="button" id="btnRentReqDeny">Deny</button>
                                 </div>
                             </div>
                         </div>
@@ -1053,7 +1053,7 @@
                         <div class="col-12">
                             <div class="row justify-content-center">
                                 <div class="col-1">
-                                    <label class="mt-1 fs-4 col-3" for="inputRentReqSearch" style="width: max-content"> <i class="fa-solid fa-magnifying-glass"></i> Search </label>
+                                    <label class="mt-1 fs-4 col-3" id="btnSearchRentReq" for="inputRentReqSearch" style="width: max-content"> <i class="fa-solid fa-magnifying-glass"></i> Search </label>
                                 </div>
                                 <div class="col-6 ms-3">
                                     <input class="form-control col-9" id="inputRentReqSearch" type="text">
